[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fontes/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cenas/cenarios/interface/Dialogo.gd" type="Script" id=2]
[ext_resource path="res://cenas/cenarios/interface/BotaoAcao.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.145098, 0.137255, 0.137255, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.72549, 0.576471, 0.392157, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 2

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[node name="Dialogo" type="Panel"]
margin_left = 30.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 130.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 570.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botoes" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 560.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 25 )
alignment = 1

[node name="BotoesAcao" type="HBoxContainer" parent="VBoxContainer/Botoes"]
margin_left = 3.0
margin_right = 523.0
margin_bottom = 28.0
rect_min_size = Vector2( 520, 0 )
alignment = 1

[node name="Continuar" parent="VBoxContainer/Botoes" instance=ExtResource( 3 )]
margin_left = 527.0
margin_right = 557.0
rect_min_size = Vector2( 30, 0 )
text = ">"
inicia_invisivel = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="button_down" from="VBoxContainer/Botoes/Continuar" to="." method="_on_Continuar_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
